crates/hoppy-cli/tests/e2e/snapshots/e2e__cli_shield__shield_access_list_create_json.snap
---
source: tests/e2e/cli_shield.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "id": 9002,
  "name": "Allowed IPs",
  "description": null,
  "type": 0,
  "content": "192.168.1.1\n10.0.0.1",
  "checksum": null,
  "entryCount": 2,
  "lastModified": "2025-03-01T12:00:00Z"
}
