crates/hoppy-cli/tests/e2e/snapshots/e2e__cli_shield__shield_bot_detection_get_json.snap
---
source: tests/e2e/cli_shield.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "shieldZoneId": 55001,
  "requestIntegrity": {
    "sensitivity": 2
  },
  "ipAddress": {
    "sensitivity": 1
  },
  "browserFingerprint": {
    "sensitivity": 2,
    "aggression": 2,
    "complexEnabled": false
  },
  "executionMode": 1
}
